...
 * limitations under the License.
 */
package com.google.jetpackcamera.ui.components.capture

import androidx.compose.ui.semantics.SemanticsPropertyKey
import androidx.compose.ui.semantics.SemanticsPropertyReceiver
const val CAPTURE_BUTTON = "CaptureButton"
internal const val CAPTURE_BUTTON_RING_BORDER = "CaptureButtonRingBorder"
const val CAPTURE_MODE_TOGGLE_BUTTON = "CaptureModeToggleButton"
const val FLIP_CAMERA_BUTTON = "FlipCameraButton"
const val SNACKBAR_NODE_TAG = "SnackbarNodeTag"

const val IMAGE_WELL_TAG = "ImageWellTag"

const val PREVIEW_DISPLAY = "PreviewDisplay"
const val SCREEN_FLASH_OVERLAY = "ScreenFlashOverlay"
const val AUDIO_INPUT_TOGGLE = "AudioInputToggle"
const val FOCUS_METERING_INDICATOR_TAG = "FocusMeteringIndicatorTag"

enum class AudioInputState {
    OFF,
    READY,
    INCOMING
}

val AudioStateProperty = SemanticsPropertyKey<AudioInputState>("AudioState")
var SemanticsPropertyReceiver.audioState by AudioStateProperty

const val ZOOM_BUTTON_ROW_TAG = "ZoomButtonRowTag"
const val ZOOM_BUTTON_MIN_TAG = "ZoomButtonMinTag"
const val ZOOM_BUTTON_1_TAG = "ZoomButton1Tag"
const val ZOOM_BUTTON_2_TAG = "ZoomButton2Tag"
const val ZOOM_BUTTON_5_TAG = "ZoomButton5Tag"

// debug component tags
...
