/*
 * Copyright (C) 2026 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.google.jetpackcamera.ui.debug

const val ZOOM_RATIO_TAG = "ZoomRatioTag"
const val LOGICAL_CAMERA_ID_TAG = "LogicalCameraIdTag"
const val PHYSICAL_CAMERA_ID_TAG = "PhysicalCameraIdTag"
const val DEBUG_OVERLAY_BUTTON = "DebugOverlayButton"

const val BTN_DEBUG_HIDE_COMPONENTS_TAG = "btn_debug_hide_components"
const val DEBUG_OVERLAY_SHOW_CAMERA_PROPERTIES_BUTTON = "DebugOverlayShowCameraPropertiesButton"
const val DEBUG_OVERLAY_SET_ZOOM_RATIO_BUTTON = "DebugOverlaySetZoomRatioButton"
const val DEBUG_OVERLAY_CAMERA_PROPERTIES_TAG = "DebugOverlayCameraPropertiesTag"
const val DEBUG_OVERLAY_SET_ZOOM_RATIO_TEXT_FIELD = "DebugOverlaySetZoomRatioTextField"
const val DEBUG_OVERLAY_SET_ZOOM_RATIO_SET_BUTTON = "DebugOverlaySetZoomRatioSetButton"
const val DEBUG_OVERLAY_VIDEO_RESOLUTION_TAG = "DebugOverlayVideoResolutionTag"
const val DEBUG_OVERLAY_VIDEO_BITRATE_TAG = "DebugOverlayVideoBitrateTag"
const val DEBUG_OVERLAY_AUDIO_BITRATE_TAG = "DebugOverlayAudioBitrateTag"
const val DEBUG_OVERLAY_SET_BITRATE_BUTTON = "DebugOverlaySetBitrateButton"
const val DEBUG_OVERLAY_SET_VIDEO_BITRATE_TEXT_FIELD = "DebugOverlaySetVideoBitrateTextField"
const val DEBUG_OVERLAY_SET_AUDIO_BITRATE_TEXT_FIELD = "DebugOverlaySetAudioBitrateTextField"
const val DEBUG_OVERLAY_SET_BITRATE_CONFIRM_BUTTON = "DebugOverlaySetBitrateConfirmButton"
